--- a/views/hr_leave_type_views.xml
+++ b/views/hr_leave_type_views.xml
@@ -13,16 +13,13 @@
             <xpath expr="//group[@name='visual']" position="after">
                 <group name="enhanced_rules" string="Enhanced Leave Rules" class="mw-100 col-lg-12">
                     <group>
-                        <field name="l10n_bd_leave_category"/>
                         <field name="l10n_bd_is_sandwich_leave"/>
                         <field name="l10n_bd_max_days_per_year"/>
-                        <field name="l10n_bd_min_service_required"/>
                         <field name="l10n_bd_notice_days"/>
                     </group>
                     <group>
                         <field name="l10n_bd_carryover_allowed"/>
                         <field name="l10n_bd_carryover_max_days" invisible="not l10n_bd_carryover_allowed"/>
-                        <field name="l10n_bd_encashment_allowed"/>
                     </group>
                 </group>
             </xpath>
@@ -39,8 +36,7 @@
         <field name="arch" type="xml">
             
             <xpath expr="//field[@name='display_name']" position="after">
-                <field name="l10n_bd_leave_category" string="Category" widget="badge" optional="show"/>
-                <field name="l10n_bd_is_sandwich_leave" string="Sandwich" optional="show"/>
+                <field name="l10n_bd_is_sandwich_leave" string="Sandwich Rule" optional="show"/>
             </xpath>
             
         </field>
