New updates added

--- a/views/hr_leave_type_views.xml
+++ b/views/hr_leave_type_views.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     
-    <!-- ENHANCED LEAVE TYPE FORM VIEW -->
+    <!-- ENHANCED LEAVE TYPE FORM VIEW - Add fields to Configuration section -->
     <record id="hr_leave_type_view_form_enhanced" model="ir.ui.view">
         <field name="name">hr.leave.type.view.form.enhanced</field>
         <field name="model">hr.leave.type</field>
@@ -9,19 +9,13 @@
         <field name="priority">50</field>
         <field name="arch" type="xml">
             
-            <!-- Add enhanced settings after the visual group -->
-            <xpath expr="//group[@name='visual']" position="after">
-                <group name="enhanced_rules" string="Enhanced Leave Rules" class="mw-100 col-lg-12">
-                    <group>
-                        <field name="l10n_bd_is_sandwich_leave"/>
-                        <field name="l10n_bd_max_days_per_year"/>
-                        <field name="l10n_bd_notice_days"/>
-                    </group>
-                    <group>
-                        <field name="l10n_bd_carryover_allowed"/>
-                        <field name="l10n_bd_carryover_max_days" invisible="not l10n_bd_carryover_allowed"/>
-                    </group>
-                </group>
+            <!-- Add fields inside Configuration group -->
+            <xpath expr="//group[@name='configuration']" position="inside">
+                <field name="l10n_bd_is_sandwich_leave"/>
+                <field name="l10n_bd_max_days_per_year"/>
+                <field name="l10n_bd_notice_days"/>
+                <field name="l10n_bd_carryover_allowed"/>
+                <field name="l10n_bd_carryover_max_days" invisible="not l10n_bd_carryover_allowed"/>
             </xpath>
             
         </field>
@@ -37,6 +31,7 @@
             
             <xpath expr="//field[@name='display_name']" position="after">
                 <field name="l10n_bd_is_sandwich_leave" string="Sandwich Rule" optional="show"/>
+                <field name="l10n_bd_max_days_per_year" string="Max Days/Year" optional="hide"/>
             </xpath>
             
         </field>
