--- a/views/hr_holidays_menus.xml
+++ b/views/hr_holidays_menus.xml
@@ -1,36 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     
-    <!-- RENAME MENUS:  "Time Off" to "Leaves" for consistency -->
+    <!-- ============================================ -->
+    <!-- RENAME ALL "Time Off" to "Leaves" -->
+    <!-- ============================================ -->
     
     <!-- Main Menu -->
     <record id="hr_holidays.menu_hr_holidays_root" model="ir.ui.menu">
         <field name="name">Leaves</field>
     </record>
     
-    <!-- Sub-menus -->
+    <!-- My Time submenu -->
     <record id="hr_holidays.menu_hr_holidays_my_leaves" model="ir.ui.menu">
         <field name="name">My Leaves</field>
     </record>
     
-    <record id="hr_holidays.hr_leave_menu_my" model="ir.ui.menu">
-        <field name="name">My Leave Requests</field>
+    <!-- Dashboard action name -->
+    <record id="hr_holidays.hr_leave_action_new_request" model="ir.actions.act_window">
+        <field name="name">Dashboard</field>
     </record>
     
+    <!-- My Time Off -> My Leaves -->
+    <record id="hr_holidays.hr_leave_action_my" model="ir.actions.act_window">
+        <field name="name">My Leaves</field>
+    </record>
+    
+    <record id="hr_holidays.hr_leave_menu_my" model="ir.ui.menu">
+        <field name="name">My Leaves</field>
+    </record>
+    
+    <!-- My Allocations -> My Leave Balance -->
     <record id="hr_holidays.menu_open_allocation" model="ir.ui.menu">
         <field name="name">My Leave Balance</field>
     </record>
     
+    <record id="hr_holidays.hr_leave_allocation_action_my" model="ir.actions.act_window">
+        <field name="name">My Leave Balance</field>
+    </record>
+    
+    <!-- Management > Time Off -> Leaves -->
     <record id="hr_holidays.menu_open_department_leave_approve" model="ir.ui.menu">
         <field name="name">Leave Requests</field>
     </record>
     
+    <record id="hr_holidays.hr_leave_action_action_approve_department" model="ir.actions.act_window">
+        <field name="name">All Leaves</field>
+    </record>
+    
+    <!-- Management > Allocations -> Leave Allocations -->
     <record id="hr_holidays.hr_holidays_menu_manager_approve_allocations" model="ir.ui.menu">
         <field name="name">Leave Allocations</field>
     </record>
     
+    <record id="hr_holidays.hr_leave_allocation_action_approve_department" model="ir.actions.act_window">
+        <field name="name">Leave Allocations</field>
+    </record>
+    
+    <record id="hr_holidays.hr_leave_allocation_action_all" model="ir.actions.act_window">
+        <field name="name">All Leave Allocations</field>
+    </record>
+    
+    <!-- Reporting -->
+    <record id="hr_holidays.action_hr_available_holidays_report" model="ir.actions.act_window">
+        <field name="name">Leave Analysis</field>
+    </record>
+    
+    <record id="hr_holidays.menu_hr_available_holidays_report_tree" model="ir.ui.menu">
+        <field name="name">Leave Analysis</field>
+    </record>
+    
+    <!-- Configuration > Time Off Types -> Leave Types -->
     <record id="hr_holidays.hr_holidays_status_menu_configuration" model="ir.ui.menu">
         <field name="name">Leave Types</field>
     </record>
+    
+    <record id="hr_holidays.open_view_holiday_status" model="ir.actions.act_window">
+        <field name="name">Leave Types</field>
+    </record>
+    
+    <!-- Public Holidays menu -->
+    <record id="hr_holidays.hr_holidays_public_time_off_menu_configuration" model="ir.ui.menu">
+        <field name="name">Public Holidays</field>
+    </record>
 
-</odoo>
+</odoo> 
